Рефакторинг. Добавлен класс InMemoryNetwork<TVertex, TEdge>, yEdDirectedNetwork теперь наследует его и реализует логику загрузки. Класс yEdFile удален.

--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BFSTest.cs" />
     <Compile Include="DirectedNetworkTest.cs" />
     <Compile Include="ExampleTest.cs" />
     <Compile Include="NetworkAnalystTest.cs" />
